@@ -27,7 +27,7 @@ function smarty_core_load_resource_plugin($params, &$smarty)
         if (!$_plugin[1] && count($_plugin[0])) {
             $_plugin[1] = true;
             foreach ($_plugin[0] as $_plugin_func) {                 
-                if (!$smarty->_plugin_implementation_exists($_plugin_func)) {
+                if (!is_callable($_plugin_func)) {
                     $_plugin[1] = false;
                     break;
                 }
