@@ -1,3 +1,4 @@
+  - remove Smarty::_plugin_implementation_exists() - use is_callable() (messju)
   - ignore {strip}/{/strip) inside {strip}-blocks (messju)
   - fixed removal of leading/trailing newlines in {strip}-blocks (messju)
   - fixed proper escaping of " and ' with escape:javascript (messju)
